kubernetes/backend/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: backend-service
  namespace: cloudapp
spec:
  type: ClusterIP
  selector:
    app: backend
  ports:
    - name:       http
      port:       3001
      targetPort: 3001
      protocol:   TCP
